game object setup

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <div class="titlebar"><button>menu</button><h3>Hello Player</h3></div>
     <div class="mainContainer">
         <div class="canvaContainer">
-            <canvas id="canvas" width="640" height="480">
+            <canvas id="canvas" width="480" height="360">
             </canvas>
         </div>
         <div class="controlpannel">
@@ -23,6 +23,8 @@
         <div class="playerCard">Player</div>
         <div class="playerStats">Info: Level:---</div>
     </div>
-    <script src="./mainScript.js"></script>
+    <script type="module" src="./Sprite.js"></script>
+    <script type="module" src="./Gameobject.js"></script>
+    <script type="module" src="./mainScript.js"></script>
 </body>
 </html>
