--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         </div>
         <div class="controlpannel">
             <button>save</button>
-            <button>pause</button>
+            <button id="pause">pause</button>
             <button>fill Screen</button>
         </div>
     </div>
