--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
     </div>
     <script type="module" src="./Sprite.js"></script>
     <script type="module" src="./Gameobject.js"></script>
+    <script type="module" src="./Hero.js"></script>
     <script type="module" src="./mainScript.js"></script>
 </body>
 </html>
