--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <div class="playerCard">Player</div>
         <div class="playerStats">Info: Level:---</div>
     </div>
+    <script type="module" src="./Input.js"></script>
+    <script type="module" src="./GameObject.js"></script>
     <script type="module" src="./Sprite.js"></script>
-    <script type="module" src="./Gameobject.js"></script>
-    <script type="module" src="./Hero.js"></script>
+    <script type="module" src="./Player.js"></script>
     <script type="module" src="./mainScript.js"></script>
 </body>
 </html>
